# sg-heartland-business-scout

./: .gitignore  App.tsx  README.md  constants.tsx  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  types.ts
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  logging_config.py  main.py
backend/app/agents/: commercial.py  delta_detector.py  demographics.py  knowledge_integrator.py  marathon_observer.py  market_intel.py  source_verifier.py  strategist.py
backend/app/graphs/: dossier_graph.py  marathon_graph.py  scout_graph.py
backend/app/models/: db_models.py  schemas.py  state.py
backend/app/routers/: _event_queue.py  scout.py
backend/app/tools/: _datagov.py  hdb.py  singstat.py  ura.py  web_search.py
backend/tests/: test_tools.py
frontend/: App.tsx  index.html  package-lock.json  package.json  types.ts  vite.config.ts
frontend/services/: api.ts  geminiService.ts
services/: api.ts
